# shaggy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  valgrind.supp
bindings/perl/: README.md
bindings/perl/lib/AnyEvent/: HTTP2.pm
docs/: DOMAIN.md  README.md  language-bindings.md  perl-binding.md
docs/decisions/: 001-agent-ready-documentation.md  002-event-loop-compatibility.md  003-testing-fuzzing-valgrind.md  004-dialectic-client-server-testing.md  005-http1-websocket-sibling-libraries.md  006-core-library-as-plumbing-pdu-stack.md  007-documentation-and-manpage-updates.md  008-c-only-examples-and-codebase.md  009-consistent-protocol-interfaces.md  010-c-interfaces-and-language-bindings.md  011-nefarious-mitm-adversarial-testing.md  012-extended-event-loop-and-real-time-compatibility.md
examples/: LICENSE  coroutine_http2_kv.c  epoll_http2_kv.c  espidf_http2_kv.c  libev_http2_kv  libev_http2_kv.c  liburing_http2_kv  liburing_http2_kv.c  libuv_http2_kv.c  rtos_http2_kv.c
fuzz/: fuzz_http2.c
include/: http1.h  http2.h  protocol_events.h  websocket.h
man/man3/: libhttp2.3  websocket_create.3  websocket_destroy.3  websocket_feed_input.3  websocket_next_event.3  websocket_send.3
src/: http1.c  http2.c  websocket.c
tests/: test_http1_errors.c  test_http1_websocket.c  test_http2.c  test_websocket_close.c  test_websocket_errors.c  test_websocket_fragmentation.c  test_websocket_fragmentation_edges.c  test_websocket_fragmentation_precise.c  test_websocket_interleaved.c  test_websocket_ping_pong.c
